# mmtk-core

./: .gitignore  Cargo.toml  README.md  build.rs  heapdump.proto
docs/tutorial/code/mygc_semispace/: gc_work.rs
docs/userguide/src/tutorial/code/mygc_semispace/: gc_work.rs
macros/: Cargo.toml
macros/src/: plan_trace_object_impl.rs
performance-history/: history.md
src/: args.rs  build_info.rs  gc_log.rs  global_state.rs  lib.rs  memory_manager.rs  mmtk.rs  rust_mem_counter.rs
src/plan/: barriers.rs  controller_collector_context.rs  gc_requester.rs  global.rs  mod.rs  mutator_context.rs  plan_constraints.rs  tracing.rs  transitive_closure.rs
src/plan/generational/: barrier.rs  gc_work.rs  global.rs  mod.rs
src/plan/generational/copying/: gc_work.rs  global.rs  mod.rs  mutator.rs
src/plan/generational/immix/: gc_work.rs  global.rs  mod.rs  mutator.rs
src/plan/immix/: barrier.rs  gc_work.rs  global.rs  mod.rs  mutator.rs  schedule.rs
src/plan/lxr/: barrier.rs  cm.rs  cm2.rs  cm_nodecs.rs  emergency.rs  gc_work.rs  global.rs  mature_evac.rs  mod.rs  mutator.rs  rc.rs  rc_stack.rs  remset.rs  schedule.rs  shapes.proto
src/plan/markcompact/: gc_work.rs  global.rs  mutator.rs
src/plan/marksweep/: global.rs  mutator.rs
src/plan/nogc/: global.rs  mutator.rs
src/plan/pageprotect/: global.rs  mutator.rs
src/plan/semispace/: global.rs  mutator.rs
src/plan/sticky/immix/: global.rs  mutator.rs
src/policy/: copy_context.rs  copyspace.rs  immortalspace.rs  largeobjectspace.rs  lockfreeimmortalspace.rs  markcompactspace.rs  mod.rs  sft.rs  sft_map.rs  space.rs
src/policy/immix/: block.rs  block_allocation.rs  chunk.rs  cset.rs  defrag.rs  defrag_policy.rs  immixspace.rs  line.rs  mod.rs  rc.rs  rc_work.rs  region.rs  remset.rs
src/policy/mallocspace/: global.rs
src/policy/marksweepspace/malloc_ms/: global.rs  mod.rs
src/policy/marksweepspace/native_ms/: global.rs
src/scheduler/: controller.rs  gc_work.rs  mod.rs  scheduler.rs  stat.rs  work.rs  work_bucket.rs  work_counter.rs  worker.rs  worker_goals.rs  worker_monitor.rs
src/util/: address.rs  api_util.rs  cm.rs  conversions.rs  exponential_decay.rs  finalizable_processor.rs  freelist.rs  generic_freelist.rs  heapdump.rs  int_array_freelist.rs  linear_scan.rs  logger.rs  memory.rs  mod.rs  object_forwarding.rs  opaque_pointer.rs  options.rs  raw_memory_freelist.rs  rc.rs  reference_processor.rs  rust_util.rs  segregated_freelist.rs  test_util.rs
src/util/alloc/: allocator.rs  bumpallocator.rs  embedded_meta_data.rs  immix_allocator.rs
src/util/copy/: mod.rs
src/util/deque/: deque.rs  fifo.rs  lifo.rs  mod.rs
src/util/heap/: accounting.rs  blockpageresource.rs  blockpageresource2.rs  blockpageresource_legacy.rs  blockpageresource_nosweep.rs  chunk_map.rs  freelistpageresource.rs  gc_trigger.rs  heap_meta.rs  mod.rs  monotonepageresource.rs  pageresource.rs  segregated_freelist_pageresource.rs  space_descriptor.rs  vmrequest.rs
src/util/heap/layout/: byte_map_mmapper.rs  chunk_freelist.rs  chunk_freelist2.rs  fragmented_mapper.rs  heap_layout.rs  heap_parameters.rs  map.rs  map32.rs  map64.rs  mmapper.rs  mod.rs  vm_layout.rs  vm_layout_constants.rs
src/util/metadata/: global.rs  log_bit.rs  metadata_val_traits.rs  mod.rs
src/util/metadata/side_metadata/: constants.rs  global.rs  helpers.rs  sanity.rs  side_metadata_tests.rs  spec_defs.rs
src/util/sanity/: sanity_checker.rs
src/util/statistics/: mod.rs  stats.rs
src/util/test_util/: mod.rs
src/vm/: collection.rs  edge_shape.rs  mod.rs  object_model.rs  scanning.rs  slot.rs
tests/: test_roots_work_factory.rs
tools/tracing/: lxr_work.bt
